# stratego-setup-generator

./: LICENSE  README.md  main.ipynb  model.pth  pyproject.toml  requirements.txt
models/: lstm_generator.pth  transformer_generator.pth
notebooks/: lstm_evaluation.ipynb  lstm_training.ipynb  transformer_evaluation.ipynb  transformer_training.ipynb
src/: constants.py  evaluation.py  generators.py  plotting.py  stratego_utils.py  training.py
src/stratego_setup_generator/: training.py
